--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -49,6 +49,94 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="50" data-price="20.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/326hizX"><img src="https://m.media-amazon.com/images/I/81VpIlzD1HL._SR400,400_.jpg" alt="Ufanore Full Face Snorkel Mask" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/326hizX">Ufanore Full Face Snorkel Mask, Snorkeling Mask with Detachable Camera Mount, Foldable 180° Panoramic View,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.00</span><span class="ori_price">$39.99</span>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <textarea readonly="readonly" class="code_area">5068W4DQ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $39.99</strong> with promo code: <strong class="m_codes">5068W4DQ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 30, 2019 at 12:01 AM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/326hizX">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="40" data-price="11.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/323w8qT"><img src="https://m.media-amazon.com/images/I/71TyK1vHExL._SR400,400_.jpg" alt="Sling Backpack Crossbody Pack Bag" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/323w8qT">Sling Backpack Crossbody Pack Bag One Strap Chest Bag Casual Backpacks,Perkisboby Sling Bag One Shoulder Strap Crossbody...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.39</span><span class="ori_price">$18.99</span></address>
+      <textarea readonly="readonly" class="code_area">40UJEJVP</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $18.99</strong> with promo code: <strong class="m_codes">40UJEJVP</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/323w8qT">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="3.35">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KWWoxG"><img src="https://m.media-amazon.com/images/I/71fyXuMx2pL._SR400,400_.jpg" alt="JOYSHAKER Protein Shaker Bottles" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KWWoxG">JOYSHAKER Protein Shaker Bottles for Sports, Leak Proof BPA and Phthalate-Free Plastic Wide Mouth Gyms Sports Shaker Cup with Mixer</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$3.35</span><span class="ori_price">$6.69</span></address>
+      <textarea readonly="readonly" class="code_area">50W3TN4T</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $6.69</strong> with promo code: <strong class="m_codes">50W3TN4T</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 01, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2KWWoxG">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="30.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2HpjdYE"><img src="https://m.media-amazon.com/images/I/71TXeHolZRL._SR400,400_.jpg" alt="Canvas Duffle Bag for Travel" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2HpjdYE">Canvas Duffle Bag for Travel, 38 Liter Leather Weekend Bag Carry On Bag Overnight Travel Tote Luggage for Men Women</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$30.00</span><span class="ori_price">$59.99</span></address>
+      <textarea readonly="readonly" class="code_area">50LAH2EQ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $59.99</strong> with promo code: <strong class="m_codes">50LAH2EQ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 16, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2HpjdYE">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="11.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KVT8Cm"><img src="https://m.media-amazon.com/images/I/81CWHWkTLvL._SR400,400_.jpg" alt="Phone Tripod" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KVT8Cm">Phone Tripod, Flexible Cell Phone Tripod Adjustable Camera Stand Holder with Wireless Remote and Universal Clip 360°...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.99</span><span class="ori_price">$14.99</span></address>
+      <textarea readonly="readonly" class="code_area">207FTDQI</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>20% off at $14.99</strong> with promo code: <strong class="m_codes">207FTDQI</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 20, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2KVT8Cm">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="20" data-price="21.59">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2HqfiL2"><img src="https://m.media-amazon.com/images/I/71BVzqPXvUL._SR400,400_.jpg" alt="Shower Filter Hard Water Softener" /></a>
