--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -15,7 +15,7 @@
          <div class="toggle">
             <ul>
               <li>
-                <a href="#n">NOTES</a>
+                <a href="#n">Notes</a>
                 <ul>
                   <li>Deals & pricing may change or expire at anytime.</li>
                   <li>Some of promotion codes can expire fast.</li>
@@ -27,7 +27,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#n">HOW TO USE</a>
+                <a href="#n">How to use</a>
                 <ul>
                   <li>Copy "Promotional Code"</li>
                   <li>Click "Use Code"</li>
@@ -41,6 +41,13 @@
                     <span class="double green">Extra Discount</span>
                     <em>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</em>
                   </li>
+                </ul>
+              </li>
+              <li>
+                <a href="#n">Why is my code not working?</a>
+                <ul>
+                  <li>Check to make sure the promo code isn’t expired and that you’ve entered it correctly.</li>
+                  <li>Make sure the promo code is available in your country and the item you’ve selected is included in the offer.</li>
                 </ul>
               </li>
               <li class="last7days">
