--- a/app/views/recommends/show.html.erb
+++ b/app/views/recommends/show.html.erb
@@ -448,7 +448,7 @@
             <%= link_to (image_tag recommend.re_image), recommend %>
             <em><%= recommend.re_filter %></em>
             <h3><%= link_to recommend.re_title, recommend %></h3>
-            <p><%= link_to recommend.re_intro, recommend %></p>
+            <!-- <p><%= link_to recommend.re_intro, recommend %></p> -->
           </div>
         <% end %>
       </div>
