--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -131,11 +131,11 @@
 
 .show_more_wrapper{margin-bottom:50px;}
 .show_more_box h2{margin-bottom:5px;}
-.show_more_ctn{float:left;width:31.33%;height:500px;margin:0 1% 95px 1%;font-family: 'Montserrat', sans-serif;}
+.show_more_ctn{float:left;width:31.33%;height:auto;margin:0 1% 95px 1%;font-family: 'Montserrat', sans-serif;}
 .show_more_ctn a{text-decoration:none;color:#3d3d3d;}
 .show_more_ctn img{width:100%;height:300px;object-fit:cover;}
 .show_more_ctn em{border-bottom:1px solid #ccc;width:40%;display:block;text-transform:uppercase;}
-.show_more_ctn h3{margin:7px 0 0 0;line-height:1.4;height:2.8em;overflow:hidden;font-weight:100;}
+.show_more_ctn h3{margin:7px 0 0 0;/*line-height:1.4;height:2.8em;*/overflow:hidden;font-weight:100;color:#616161;font-size:25px;}
 .show_more_ctn p{border-left:5px solid rgba(0,153,102,0.3);padding:10px;}
 
 @media screen and (max-width:640px){
