--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -468,6 +468,8 @@
 .most_body_header a{text-decoration:none;float:left;width:31.33%;height:200px;margin:1%;overflow:hidden;}
 .most_body_header a img{width:100%;height:100%;object-fit:cover;}
 
+.guide_wrap .most_main{float:left;width:31.33%;margin:1%;overflow:hidden;}
+
 .most_box{float:left;width:18%;margin:1%;overflow:hidden;}
 .most_box a{text-transform:uppercase;}
 .most_box a p, .most_body_header a p{font-size:20px;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);color:#fff;font-weight:bold;text-align:center;}
