--- a/app/views/deals/_body_most_reviewed_pc.html.erb
+++ b/app/views/deals/_body_most_reviewed_pc.html.erb
@@ -1,5 +1,21 @@
+
+<!-- Main Categories One -->
+<div class="filter-node most_box most_main" data-filter='["Categoryes","Electronics"]'>
+  <a target="_blank" href="https://amzn.to/2Ho1BMA" class="overlay-container" data-overlay-text="Electronics"><img src="https://images.unsplash.com/photo-1468495244123-6c6c332eeece?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Electronics" class="overlay-img" /><p>Electronics</p></a> 
+</div>
+
+<div class="filter-node most_box most_main" data-filter='["Categoryes","Cell Phones & Accessories "]'>
+  <a target="_blank" href="https://amzn.to/3249sXr" class="overlay-container" data-overlay-text="Cell Phones & Accessories  "><img src="https://images.unsplash.com/photo-1512499617640-c74ae3a79d37?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Cell Phones & Accessories " class="overlay-img" /><p>Cell Phones & Accessories </p></a> 
+</div>
+
+<div class="filter-node most_box most_main" data-filter='["Categoryes","Computers & Accessories"]'>
+  <a target="_blank" href="https://amzn.to/2KY6JJy" class="overlay-container" data-overlay-text="Computers & Accessories"><img src="https://images.unsplash.com/photo-1542393545-10f5cde2c810?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Computers & Accessories" class="overlay-img" /><p>Computers & Accessories</p></a> 
+</div>
+<!-- End -->
+
+
 <!-- <div class="filter-node most_box" data-filter='["Categoryes","Title"]'>
-<a target="_blank" href="products_Link" class="overlay-container" data-overlay-text="Title"><img src="Image_URL" alt="Title" class="overlay-img" /><p>Title</p></a>
+<a target="_blank" href="products_Link" class="overlay-container" data-overlay-text="Title"><img src="Image_URL" alt="Title" class="overlay-img" /><p>Title</p></a> 
 </div> -->
 
 <div class="filter-node most_box" data-filter='["tech","Power Bank"]'>
@@ -10,16 +26,8 @@
 <a target="_blank" href="https://amzn.to/2KUFLlX" class="overlay-container" data-overlay-text="car mount holder"><img src="https://images-na.ssl-images-amazon.com/images/I/71C5Rzrql3L._SX679_.jpg" alt="car mount holder" class="overlay-img" /><p>car mount holder</p></a>
 </div>
 
-<div class="filter-node most_box" data-filter='["Categoryes","Title"]'>
-<a target="_blank" href="products_Link" class="overlay-container" data-overlay-text="Title"><img src="Image_URL" alt="Title" class="overlay-img" /><p>Title</p></a>
-</div>
-
-<div class="filter-node most_box" data-filter='["Categoryes","Title"]'>
-<a target="_blank" href="products_Link" class="overlay-container" data-overlay-text="Title"><img src="Image_URL" alt="Title" class="overlay-img" /><p>Title</p></a>
-</div>
-
-<div class="filter-node most_box" data-filter='["Categoryes","Title"]'>
-<a target="_blank" href="products_Link" class="overlay-container" data-overlay-text="Title"><img src="Image_URL" alt="Title" class="overlay-img" /><p>Title</p></a>
+<div class="filter-node most_box" data-filter='["tech","fitbit"]'>
+<a target="_blank" href="https://amzn.to/2Hr6ox0" class="overlay-container" data-overlay-text="fitbit"><img src="https://images.unsplash.com/photo-1503328427499-d92d1ac3d174?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="fitbit" class="overlay-img" /><p>fitbit</p></a>
 </div>
 
 <div class="filter-node most_box" data-filter='["tech","earbuds Headphones"]'>
@@ -49,6 +57,21 @@
 <div class="filter-node most_box" data-filter='["tech","Wi-Fi Extender"]'>
   <a target="_blank" href="https://amzn.to/326a7If" class="overlay-container" data-overlay-text="Wi-Fi Extender"><img src="https://images.unsplash.com/photo-1560622496-c49bec679e71?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Wi-Fi Extender" class="overlay-img" /><p>Wi-Fi Extender</p></a>
 </div>
+
+
+<!-- Main Categories Two -->
+<div class="filter-node most_box most_main" data-filter='["Categoryes","Appliances"]'>
+  <a target="_blank" href="https://amzn.to/3223G8Q" class="overlay-container" data-overlay-text="Appliances"><img src="https://images.unsplash.com/photo-1521732292260-b73d63a37f5b?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Appliances" class="overlay-img" /><p>Appliances</p></a> 
+</div>
+
+ <div class="filter-node most_box most_main" data-filter='["Categoryes","Home & Kitchen"]'>
+  <a target="_blank" href="https://amzn.to/2HG1c8D" class="overlay-container" data-overlay-text="Home & Kitchen"><img src="https://images.unsplash.com/photo-1556909172-54557c7e4fb7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Home & Kitchen" class="overlay-img" /><p>Home & Kitchen</p></a> 
+</div>
+
+<div class="filter-node most_box most_main" data-filter='["Categoryes","Tools & Home Improvement"]'>
+  <a target="_blank" href="https://amzn.to/32fazE7" class="overlay-container" data-overlay-text="Tools & Home Improvement"><img src="https://images.unsplash.com/photo-1562259929-b4e1fd3aef09?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Tools & Home Improvement" class="overlay-img" /><p>Tools & Home Improvement</p></a> 
+</div>
+<!-- End -->
 
 <div class="filter-node most_box" data-filter='["tech","Routers"]'>
   <a target="_blank" href="https://amzn.to/33Nk3bf" class="overlay-container" data-overlay-text="Routers"><img src="https://images.unsplash.com/photo-1516044734145-07ca8eef8731?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Routers" class="overlay-img" /><p>Routers</p></a>
@@ -86,18 +109,86 @@
   <a target="_blank" href="https://amzn.to/31WtV0i" class="overlay-container" data-overlay-text="Security Camera"><img src="https://images.unsplash.com/photo-1496368077930-c1e31b4e5b44?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Security Camera" class="overlay-img" /><p>Security Camera</p></a>
 </div>
 
-<div class="filter-node most_box" data-filter='["tech","Gaming Mouse"]'>
-  <a target="_blank" href="https://amzn.to/2KScLLT" class="overlay-container" data-overlay-text="Gaming Mouse"><img src="https://images.unsplash.com/photo-1553486113-1a936f2d0e9b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Gaming Mouse" class="overlay-img" /><p>Gaming Mouse</p></a>
+<div class="filter-node most_box" data-filter='["Categoryes","Measuring Tools"]'>
+<a target="_blank" href="https://amzn.to/2HFZ7tl" class="overlay-container" data-overlay-text="Measuring Tools"><img src="https://images.unsplash.com/photo-1563770660834-82b48f27ec9d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Measuring Tools" class="overlay-img" /><p>Measuring Tools</p></a> 
 </div>
+
+<!-- Main Categories Three -->
+<div class="filter-node most_box most_main" data-filter='["Categoryes","Sports & Outdoors"]'>
+  <a target="_blank" href="https://amzn.to/341LfDd" class="overlay-container" data-overlay-text="Sports & Outdoors"><img src="https://images.unsplash.com/photo-1496055828681-8d699424c1c7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Sports & Outdoors" class="overlay-img" /><p>Sports & Outdoors</p></a> 
+</div>
+
+ <div class="filter-node most_box most_main" data-filter='["Categoryes","Patio, Lawn & Garden"]'>
+  <a target="_blank" href="https://amzn.to/3211vCk" class="overlay-container" data-overlay-text="Patio, Lawn & Garden"><img src="https://images.unsplash.com/photo-1552458453-bd0dfedd9a32?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Patio, Lawn & Garden" class="overlay-img" /><p>Patio, Lawn & Garden</p></a> 
+</div>
+
+ <div class="filter-node most_box most_main" data-filter='["Categoryes","Automotive"]'>
+  <a target="_blank" href="https://amzn.to/2Hs5m3F" class="overlay-container" data-overlay-text="Automotive"><img src="https://images.unsplash.com/photo-1539799139339-50c5fe1e2b1b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Automotive" class="overlay-img" /><p>Automotive</p></a> 
+</div>
+<!-- End -->
+
+<!-- Main Categories Four -->
+<div class="filter-node most_box most_main" data-filter='["Categoryes","Office Products"]'>
+  <a target="_blank" href="https://amzn.to/2Htu5Vf" class="overlay-container" data-overlay-text="Office Products"><img src="https://images.unsplash.com/photo-1456735190827-d1262f71b8a3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Office Products" class="overlay-img" /><p>Office Products</p></a> 
+</div>
+
+<div class="filter-node most_box most_main" data-filter='["Categoryes","Kindle"]'>
+  <a target="_blank" href="https://amzn.to/327utjY" class="overlay-container" data-overlay-text="Kindle"><img src="https://images.unsplash.com/photo-1455541504462-57ebb2a9cec1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Kindle" class="overlay-img" /><p>Kindle</p></a> 
+</div>
+
+ <div class="filter-node most_box most_main" data-filter='["Categoryes","Book"]'>
+  <a target="_blank" href="https://amzn.to/2NzhkMG" class="overlay-container" data-overlay-text="Book"><img src="https://images.unsplash.com/photo-1481627834876-b7833e8f5570?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Book" class="overlay-img" /><p>Book</p></a> 
+</div>
+<!-- End -->
+
+<!-- Main Categories Five -->
+<div class="filter-node most_box most_main" data-filter='["Categoryes","Beauty"]'>
+  <a target="_blank" href="https://amzn.to/2HuhmBQ" class="overlay-container" data-overlay-text="Beauty"><img src="https://images.unsplash.com/photo-1562887284-eb863165ebc8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Beauty" class="overlay-img" /><p>Beauty</p></a> 
+</div>
+
+<div class="filter-node most_box most_main" data-filter='["Categoryes","Clothing, Shoes & Jewelry"]'>
+  <a target="_blank" href="https://amzn.to/33WGlqW" class="overlay-container" data-overlay-text="Clothing, Shoes & Jewelry"><img src="https://images.unsplash.com/photo-1441035844538-e2ce7dba066b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Clothing, Shoes & Jewelry" class="overlay-img" /><p>Clothing, Shoes & Jewelry</p></a> 
+</div>
+
+ <div class="filter-node most_box most_main" data-filter='["Categoryes","Health & Household"]'>
+  <a target="_blank" href="https://amzn.to/2Zvg13I" class="overlay-container" data-overlay-text="Health & Household"><img src="https://images.unsplash.com/photo-1506126613408-eca07ce68773?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Health & Household" class="overlay-img" /><p>Health & Household</p></a> 
+</div>
+<!-- End -->
+
+<!-- Main Categories Six -->
+<div class="filter-node most_box most_main" data-filter='["Categoryes","Baby"]'>
+  <a target="_blank" href="https://amzn.to/2HrW6N0" class="overlay-container" data-overlay-text="Baby"><img src="https://images.unsplash.com/photo-1508009219918-7d528f269841?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Baby" class="overlay-img" /><p>Baby</p></a> 
+</div>
+
+<div class="filter-node most_box most_main" data-filter='["Categoryes","Toys & Games"]'>
+  <a target="_blank" href="https://amzn.to/3211XAw" class="overlay-container" data-overlay-text="Toys & Games"><img src="https://images.unsplash.com/photo-1558877385-81a1c7e67d72?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Toys & Games" class="overlay-img" /><p>Toys & Games</p></a> 
+</div>
+
+<div class="filter-node most_box most_main" data-filter='["Categoryes","Pet Supplies"]'>
+  <a target="_blank" href="https://amzn.to/2NzEjYa" class="overlay-container" data-overlay-text="Pet Supplies"><img src="https://images.unsplash.com/photo-1450778869180-41d0601e046e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Pet Supplies" class="overlay-img" /><p>Pet Supplies</p></a> 
+</div>
+<!-- End -->
 
 <div class="filter-node most_box" data-filter='["tech","Gaming Keyboards"]'>
   <a target="_blank" href="https://amzn.to/2HAuBB5" class="overlay-container" data-overlay-text="Gaming Keyboards"><img src="https://images.unsplash.com/photo-1558742569-fe6d39d05837?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Gaming Keyboards" class="overlay-img" /><p>Gaming Keyboards</p></a>
 </div>
 
-<div class="filter-node most_box" data-filter='["Categoryes","Computer Monitors"]'>
+<div class="filter-node most_box" data-filter='["tech","Computer Monitors"]'>
   <a target="_blank" href="https://amzn.to/2L5yezE" class="overlay-container" data-overlay-text="Computer Monitors"><img src="https://images.unsplash.com/photo-1565896311009-382b9e813b19?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Computer Monitors" class="overlay-img" /><p>Computer Monitors</p></a>
 </div>
 
-<div class="filter-node most_box" data-filter='["Categoryes","Gaming Headsets"]'>
+<div class="filter-node most_box" data-filter='["tech","Gaming Headsets"]'>
   <a target="_blank" href="https://amzn.to/2ZkYWta" class="overlay-container" data-overlay-text="Gaming Headsets"><img src="https://images.unsplash.com/photo-1560419284-6c2d2b5e0483?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Gaming Headsets" class="overlay-img" /><p>Gaming Headsets</p></a>
+</div>
+
+<div class="filter-node most_box" data-filter='["tech","PlayStation 4"]'>
+<a target="_blank" href="https://amzn.to/31Xi7uW" class="overlay-container" data-overlay-text="PlayStation 4"><img src="https://images.unsplash.com/photo-1519326788303-3d040305b8bc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="PlayStation 4" class="overlay-img" /><p>PlayStation 4</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["tech","Nintendo Switch"]'>
+<a target="_blank" href="https://amzn.to/32f56x5" class="overlay-container" data-overlay-text="Nintendo Switch"><img src="https://images.unsplash.com/photo-1559984859-d568d6eeba0f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Nintendo Switch" class="overlay-img" /><p>Nintendo Switch</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["tech","Gaming Mouse"]'>
+  <a target="_blank" href="https://amzn.to/2KScLLT" class="overlay-container" data-overlay-text="Gaming Mouse"><img src="https://images.unsplash.com/photo-1553486113-1a936f2d0e9b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Gaming Mouse" class="overlay-img" /><p>Gaming Mouse</p></a>
 </div>
