--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -532,12 +532,12 @@
 
 <div class="card clearfix" data-score="41" data-price="937.40">
   <div class="image_box">
-    <a target="_blank" href="https://amzn.to/2HupK4h"><img src="https://images-na.ssl-images-amazon.com/images/I/711LjfHktYL._SX679_.jpg" alt="HP Business 1040 G3 i7 6600U 14 8GB 256GB" /></a>
+    <a target="_blank" href="https://amzn.to/2HupK4h"><img src="https://images-na.ssl-images-amazon.com/images/I/711LjfHktYL._SX679_.jpg" alt="HP Elite Book 1040 G3, i7-6600U Processor (2.6 GHz, 4MB Cache)" /></a>
   </div>
   <div class="inner">
     <span class="regular"><em>41% OFF</em> + free shipping</span>
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="https://amzn.to/2HupK4h">HP V2W21UT#ABA Business 1040 G3 i7 6600U 14 8GB 256GB</a></p>
+    <p><a target="_blank" href="https://amzn.to/2HupK4h">HP Elite Book 1040 G3, i7-6600U Processor (2.6 GHz, 4MB Cache)</a></p>
     <div class="code_high">
       <address><span class="dis_price bestdeals">$937.40</span><span class="ori_price">$1,594.49</span></address>
       <em>*Pricing may change and deals can expire fast.</em>
