--- a/app/views/errors/server_errors.html.erb
+++ b/app/views/errors/server_errors.html.erb
@@ -1,1 +1,43 @@
-<h1>Ooops!!! Could not find it</h1>
+<div class="layout"><!--layout-->
+  <div class="wrap">
+  <%= render 'shared/header_short' %>
+
+  <img src="https://cdn.fitzandhuxley.com/assets/2018/11/27104020/logo_res.png" class="logo" width="290">
+
+    <div class="browser">
+      <div class="controls">
+        <i></i>
+        <i></i>
+        <i></i>
+      </div>
+      
+      <div class="eye"></div>
+      <div class="eye"></div>
+      <div class="mouth">
+        <div class="lips"></div>
+        <div class="lips"></div>
+        <div class="lips"></div>
+        <div class="lips"></div>
+        <div class="lips"></div>
+        <div class="lips"></div>
+        <div class="lips"></div>
+        <div class="lips"></div>
+      </div>
+    </div>
+
+    <h1><strong>We are currently too busy!</strong></h1>
+    <p>We're unable to fulfill your request at the moment. Please refresh your browser in a minute. If the problem persists, please contact our <a href="mailto: service@fitzandhuxley.com">support team</a>.</p>
+
+    <!-- 404 text -->
+    <!--
+    <h1>Unfortunately, this page does not exist.</h1>
+    <p>The link you clicked may be broken or the page may have been removed.</p>
+    -->
+
+
+  </div>
+</div>
+
+
+
+
