--- a/app/views/errors/server_errors.html.erb
+++ b/app/views/errors/server_errors.html.erb
@@ -1,8 +1,6 @@
-<div class="layout"><!--layout-->
-  <div class="wrap">
-  <%= render 'shared/header_short' %>
+<div class="errors_wrap">
 
-  <img src="https://cdn.fitzandhuxley.com/assets/2018/11/27104020/logo_res.png" class="logo" width="290">
+  <a href="/"><img src="<%=asset_path 'visual_01.jpg' %>" class="errors_logo""></a>
 
     <div class="browser">
       <div class="controls">
@@ -25,19 +23,14 @@
       </div>
     </div>
 
-    <h1><strong>We are currently too busy!</strong></h1>
-    <p>We're unable to fulfill your request at the moment. Please refresh your browser in a minute. If the problem persists, please contact our <a href="mailto: service@fitzandhuxley.com">support team</a>.</p>
+    <div class="errors_ctn">
+      <h1><strong>We are currently too busy!</strong></h1>
+      <p>We're unable to fulfill your request at the moment. Please refresh your browser in a minute. If the problem persists, please contact our <a href="mailto: service@fitzandhuxley.com">support team</a>.</p>
+    </div>
 
     <!-- 404 text -->
     <!--
     <h1>Unfortunately, this page does not exist.</h1>
     <p>The link you clicked may be broken or the page may have been removed.</p>
     -->
-
-
-  </div>
 </div>
-
-
-
-
