--- a/app/views/errors/unacceptable.html.erb
+++ b/app/views/errors/unacceptable.html.erb
@@ -2,35 +2,30 @@
 
   <a href="/"><img src="<%=asset_path 'visual_01.jpg' %>" class="errors_logo""></a>
 
-    <div class="browser">
-      <div class="controls">
-        <i></i>
-        <i></i>
-        <i></i>
-      </div>
-      
-      <div class="eye"></div>
-      <div class="eye"></div>
-      <div class="mouth">
-        <div class="lips"></div>
-        <div class="lips"></div>
-        <div class="lips"></div>
-        <div class="lips"></div>
-        <div class="lips"></div>
-        <div class="lips"></div>
-        <div class="lips"></div>
-        <div class="lips"></div>
-      </div>
+  <div class="browser">
+    <div class="controls">
+      <i></i>
+      <i></i>
+      <i></i>
     </div>
-
-    <div class="errors_ctn">
-      <h1><strong>We are currently too busy!</strong></h1>
-      <p>We're unable to fulfill your request at the moment. Please refresh your browser in a minute. If the problem persists, please contact our <a href="mailto: service@fitzandhuxley.com">support team</a>.</p>
+    
+    <div class="eye"></div>
+    <div class="eye"></div>
+    <div class="mouth">
+      <div class="lips"></div>
+      <div class="lips"></div>
+      <div class="lips"></div>
+      <div class="lips"></div>
+      <div class="lips"></div>
+      <div class="lips"></div>
+      <div class="lips"></div>
+      <div class="lips"></div>
     </div>
+  </div>
 
-    <!-- 404 text -->
-    <!--
-    <h1>Unfortunately, this page does not exist.</h1>
-    <p>The link you clicked may be broken or the page may have been removed.</p>
-    -->
+  <div class="errors_ctn">
+    <h1><strong>We are currently too busy!</strong></h1>
+    <p>We're unable to fulfill your request at the moment. Please refresh your browser in a minute. If the problem persists, please let us know about this error.<br /><a href="/messages/new">Contact Us</a></p>
+  </div>
+
 </div>
