--- a/app/views/errors/not_found.html.erb
+++ b/app/views/errors/not_found.html.erb
@@ -1,7 +1,5 @@
 <div class="errors_wrap">
-
   <a href="/"><img src="<%=asset_path 'visual_01.jpg' %>" class="errors_logo""></a>
-
     <div class="browser">
       <div class="controls">
         <i></i>
@@ -23,14 +21,9 @@
       </div>
     </div>
 
-    <div class="errors_ctn">
-      <h1><strong>We are currently too busy!</strong></h1>
-      <p>We're unable to fulfill your request at the moment. Please refresh your browser in a minute. If the problem persists, please contact our <a href="mailto: service@fitzandhuxley.com">support team</a>.</p>
+   <div class="errors_ctn">
+      <h1><strong>OPPS!! 404 error<br />Unfortunately, this page does not exist.</strong></h1>
+      <p>The link you clicked may be broken or the page may have been removed.</p>
     </div>
-
-    <!-- 404 text -->
-    <!--
-    <h1>Unfortunately, this page does not exist.</h1>
-    <p>The link you clicked may be broken or the page may have been removed.</p>
-    -->
+ 
 </div>
