--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -49,6 +49,165 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="65" data-price="17.15">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KZIKJZ"><img src="https://m.media-amazon.com/images/I/61UR5qhzwGL._SR400,400_.jpg" alt="Amstt Wireless Charger Car Mount" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>65% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KZIKJZ">Amstt Wireless Charger Car Mount, 10W Infrared Sensor Qi Fast Wireless Car Charger Auto-Clamping Air Vent Phone Holder Compatible ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$17.15</span><span class="ori_price">$48.99</span></address>
+      <textarea readonly="readonly" class="code_area">654TL282</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>65% off at $48.99</strong> with promo code: <strong class="m_codes">654TL282</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2KZIKJZ">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="35" data-price="8.44">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/3284Vna"><img src="https://m.media-amazon.com/images/I/61MnyduzDpL._SR400,400_.jpg" alt="2Pack Multi USB Cable" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>35% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/3284Vna">2Pack Multi USB Cable-ZACTEK-4FT Nylon Braided 4 in 1 USB Charger Cable with Type C,Micro USB Connectors for Mobile Phones Tablets and More(Charging Only)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.44</span><span class="ori_price">$12.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">35XEGUB4</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>35% off at $12.99</strong> with promo code: <strong class="m_codes">35XEGUB4</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 03, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/3284Vna">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="18.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/329LOc2"><img src="https://m.media-amazon.com/images/I/51DjYgHyx0L._SR400,400_.jpg" alt="Yoobao 20000mAh Portable Charger Power Bank" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/329LOc2">Yoobao 20000mAh Portable Charger Power Bank External Battery Pack (2 Outputs, 3 Inputs, Digital Display) Compatible...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$18.50</span><span class="ori_price">$36.99</span></address>
+      <textarea readonly="readonly" class="code_area">50Z2TPQ5</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $36.99</strong> with promo code: <strong class="m_codes">50Z2TPQ5</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 24, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/329LOc2">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="51" data-price="22.05">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Zn86dG"><img src="https://m.media-amazon.com/images/I/61fO2DGyeOL._SR400,400_.jpg" alt="Wireless Earbuds" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>51% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Zn86dG">Wireless Earbuds, 5.0 True Wireless Bluetooth Headphones 3D Stereo Sound Wireless Headphones Mini Sweatproof Sport Headsets...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$22.05</span><span class="ori_price">$44.99</span></address>
+      <textarea readonly="readonly" class="code_area">51MFG6D4</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>51% off at $44.99</strong> with promo code: <strong class="m_codes">51MFG6D4</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 28, 2019 at 09:00 AM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Zn86dG">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="10.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/326zLwk"><img src="https://m.media-amazon.com/images/I/61nlqnspvAL._SR400,400_.jpg" alt="[2019 Newest] Carantee 3.0 USB WiFi Adapter" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/326zLwk">[2019 Newest] Carantee 3.0 USB WiFi Adapter 1200Mbps, Wireless Network WiFi Dongle for PC/Desktop/Laptop with 5dBi Dual Band Antenna,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.49</span><span class="ori_price">$20.99</span></address>
+      <textarea readonly="readonly" class="code_area">50P4LYW7</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $20.99</strong> with promo code: <strong class="m_codes">50P4LYW7</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 29, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/326zLwk">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="4.58">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Ht3lEp"><img src="https://m.media-amazon.com/images/I/71FMFUtNsZL._SR400,400_.jpg" alt="Wireless Mouse" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Ht3lEp">Wireless Mouse, Inphic Slim Silent Click Rechargeable 2.4G Wireless Mice 1600DPI Mini Optical Portable Travel Cordless Mouse ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$4.58</span><span class="ori_price">$7.64</span>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <textarea readonly="readonly" class="code_area">40OFFMOUSE</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $7.64</strong> with promo code: <strong class="m_codes">40OFFMOUSE</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 06, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Ht3lEp">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="13.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KX0Xb3"><img src="https://m.media-amazon.com/images/I/71JkhvaEC5L._SR400,400_.jpg" alt="Bluetooth Shower Speakers" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KX0Xb3">Bluetooth Shower Speakers, HAISSKY Portable Wireless Waterproof Speaker with FM Radio & Suction Cup, Pairs Easily...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$13.99</span><span class="ori_price">$27.99</span></address>
+      <textarea readonly="readonly" class="code_area">509Y156Y</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $27.99</strong> with promo code: <strong class="m_codes">509Y156Y</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 15, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2KX0Xb3">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="13.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2NBEx10"><img src="https://m.media-amazon.com/images/I/71pe41m8TYL._SR400,400_.jpg" alt="LotFancy Laptop Fan Cooling Pad" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2NBEx10">LotFancy Laptop Fan Cooling Pad, Notebook Cooler for 13”-17” Laptop, Lap Chill Mat with 3 LED Quiet Fans, 2 USB Ports,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$13.99</span><span class="ori_price">$27.99</span></address>
+      <textarea readonly="readonly" class="code_area">5013JWG9</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $27.99</strong> with promo code: <strong class="m_codes">5013JWG9</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 01, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2NBEx10">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="29.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2L0XbNX"><img src="https://images-na.ssl-images-amazon.com/images/I/71y0QWiJ67L._SX522_.jpg" alt="Large Laptop Backpack" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2L0XbNX">Large Laptop Backpack, 17 Inch Laptop Backpack with USB Charging Port for Men and Women,TSA Laptop Backpacks College School Backpack...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$29.99</span><span class="ori_price">$39.99</span></address>
+      <textarea readonly="readonly" class="code_area">204U6S12</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>20% off at $39.99</strong> with promo code: <strong class="m_codes">204U6S12</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 08, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2L0XbNX">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="50" data-price="20.00">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2NBMRh4"><img src="https://m.media-amazon.com/images/I/61oTb4wY46L._SR400,400_.jpg" alt="TOOGE Pet Camera" /></a>
